crates/toml/tests/snapshots/invalid/table/duplicate-key-09.stderr
TOML parse error at line 5, column 2
  |
5 | [a]
  |  ^
duplicate key
